trying to fix about.anthonyhorner spacing issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -220,6 +220,10 @@ nav > * {
     margin: 0 0.25rem 0 0;
     color: var(--cambridge);
 }
+.ant {
+    margin: 0;
+    color: var(--cambridge);
+}
 .neePronunc {
     font-size: 0.9rem;
     padding: 0 0 0 0;
